messing around with sdl and orbits

--- a/src/sandbox/CMakeLists.txt
+++ b/src/sandbox/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_subdirectory(serializeCereal)
 add_subdirectory(serializeNLohmann)
 add_subdirectory(scenegui)
+add_subdirectory(loaderTest)
 add_subdirectory(drone)
+add_subdirectory(sdl)
+add_subdirectory(KeplerOrbits)
