--- a/src/sandbox/KeplerOrbits/CMakeLists.txt
+++ b/src/sandbox/KeplerOrbits/CMakeLists.txt
@@ -1,40 +1,29 @@
-set(APP_NAME scenegui)
+set(APP_NAME KeplerOrbits)
 
 file(GLOB HEADER_FILES 	CONFIGURE_DEPENDS "*.h")
 file(GLOB CPP_FILES 	CONFIGURE_DEPENDS "*.cpp")
-file(GLOB BINDING_HEADER_FILES 	CONFIGURE_DEPENDS "${CMAKE_BINARY_DIR}/bindings/*.h")
-file(GLOB BINDING_CPP_FILES 	CONFIGURE_DEPENDS "${CMAKE_BINARY_DIR}/bindings/*.cpp")
-
 
 add_executable(${APP_NAME} 
 	${HEADER_FILES}
 	${CPP_FILES}
-	${CMAKE_BINARY_DIR}/bindings/imgui_impl_glfw.h
-	${CMAKE_BINARY_DIR}/bindings/imgui_impl_glfw.cpp
-	${CMAKE_BINARY_DIR}/bindings/imgui_impl_vulkan.h
-	${CMAKE_BINARY_DIR}/bindings/imgui_impl_vulkan.cpp
-	
 )
-find_package(VulkanHeaders CONFIG REQUIRED)		
-find_package(imgui CONFIG REQUIRED)	   
+find_package(EnTT CONFIG REQUIRED)			   
 find_package(spdlog CONFIG REQUIRED)
-find_package(glfw3 CONFIG REQUIRED)
-find_package(Vulkan CONFIG REQUIRED)		
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
+
 target_link_libraries (${APP_NAME} 
 	PRIVATE				
 		${PROJECT_NAMESPACE}::common
-		imgui::imgui 
+		EnTT::EnTT
 		spdlog::spdlog_header_only
-		Vulkan::Headers
-		Vulkan::Vulkan
-		glfw::glfw
-	
+		nlohmann_json::nlohmann_json
+		SDL2::SDL2
 )
 
 target_include_directories(${APP_NAME}
 	PRIVATE
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-		$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" 
